# libinputmapper

./: .gitignore  COPYING  Makefile.am  NEWS  README  autogen.sh  configure.ac
docs/: libinputmapper.doxygen.in  libinputmapper.pc.in  libinputmapper.sym
src/: inmap_ctx.c  inmap_mapping.c  libinputmapper.h  libinputmapper.pc.in  libinputmapper_internal.h
